--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div id="movie-info"></div>
                 <div id="overlay"></div>
                 <br>
-                <h2 id="stage-instruction" style="font-size: 2rem; margin-bottom: 0;">Stage 1: Guess the genre!</h2>
+                <h2 id="stage-instruction" style="font-size: 2rem; margin-bottom: 0; font-family: 'Oswald', sans-serif;">Stage 1: Guess the genre!</h2>
                 <div id="choices"></div>
                 <div id="feedback-genre"></div>
                 <div id="feedback-year"></div>
