--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <h1>Hue Knew?</h1>
         <h2 style="line-height: 0;">The Ultimate Movie Quiz</h2>
+        <img src="images/qr_code.png" alt="QR Code" id="qr_code">
         <div id="navs">
             <button id="modes-button" class="option">MODES</button>
             <button id="play-button" class="option">PLAY</button>
