--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <input type="checkbox" id="game-mode-toggle">
                         <span class="slider"></span>
                     </label>
-                    <button id="time-button" class="option-modes" style="text-align: left;">⏱️ TIMED</button>
+                    <button id="time-button" class="option-modes" style="text-align: left;">⏱️ TIMED <sup style="font-size: 0.9rem;">alpha</sup></button>
                 </div>
 
                 <br><br>
